traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:4: error: value update is not a member of plm.universe.Direction
  while (!(getDirection()=Direction.NORTH)){gauche(); tourne= tourne + 1}
           ^TraversalByColumn:4: error: not found: value Direction
  while (!(getDirection()=Direction.NORTH)){gauche(); tourne= tourne + 1}
                          ^TraversalByColumn:7: warning: enclosing method getMondeHauteur has result type Unit: return value discarded
  return(nb)
  ^TraversalByColumn:14: error: value update is not a member of plm.universe.Direction
  while (!(getDirection()=Direction.EAST)){gauche(); tourne = tourne + 1 }
           ^TraversalByColumn:14: error: not found: value Direction
  while (!(getDirection()=Direction.EAST)){gauche(); tourne = tourne + 1 }
                          ^TraversalByColumn:17: warning: enclosing method getMondeLargeur has result type Unit: return value discarded
  return(nb)
  ^TraversalByColumn:22: error: type mismatch;
 found   : Unit
 required: Int
  val largeur : Int = getMondeLargeur()
                                     ^TraversalByColumn:23: error: type mismatch;
 found   : Unit
 required: Int
  val hauteur : Int = getMondeHauteur()
                                     ^TraversalByColumn:27: error: value hauteur is not a case class, nor does it have an unapply/unapplySeq member
    case (_,hauteur()) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX()+1,0)
            ^